# silkrust

./: .gitignore  Cargo.toml
caliente/: Cargo.toml
caliente/src/: main.rs  processor.rs
caliente/src/processor/: handshake_req.rs  message_ops.rs  module_identification.rs  ping.rs  shard_list.rs
client-module-template/: Cargo.toml
client-module-template/src/: main.rs  processor.rs
client-module-template/src/processor/: handshake_req.rs  module_identification.rs  ping.rs
proxy/: Cargo.toml
proxy/src/: client_side.rs  main.rs  server_side.rs
src/: lib.rs  net.rs  security.rs
src/net/: io.rs  massive.rs  message.rs  message_buffer.rs  net_client.rs  net_connection.rs  net_engine.rs  processor.rs
src/net/io/: fragment.rs  reader_extensions.rs
src/net/message/: direction.rs  header.rs  id.rs  kind.rs  message.rs
src/net/net_engine/: handshake.rs  readme.md
src/net/processor/: handshake_req.rs  ping.rs
src/security/: blowfish_compat.rs  checksum.rs  exchange.rs  secret_context.rs  security.rs  sequencer.rs
