[package]
name = "silkrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
blowfish-compat = { git = "https://git.eternalwings.de/tim/blowfish-compat.rs.git", branch = "master" }
bitfield-struct = "0.5"
tokio = { version = "1.26.0", features = ["full"] }
queues = "1.1.0"
rand = "0.8.5"
log = "0.4.17"