[package]
name = "caliente"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
silkrust = { path = "../" }
tokio = { version = "1.26.0", features = ["full"] }
bytes = "1.4.0"
rand = "0.8.5"
env_logger = "0.10.0"
log = "0.4.17"
bitfield-struct = "0.5"