[package]
name = "client-module-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
bitfield-struct = "0.5"
bytes = "1.4.0"
silkrust = { path = "../" }
rand = "0.8.5"
env_logger = "0.10.0"
log = "0.4.17"