[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
silkrust = { path = "../" }
tokio = { version = "1.26.0", features = ["full"] }
bytes = "1.4.0"
rand = "0.8.5"
env_logger = "0.10.0"
log = "0.4.17"
bitfield-struct = "0.5"
queues = "1.1.0"